Adding a test page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<section id="register">
 	  <button>Register</button>
 	</section>
+	<a href="./test/">this link</a>will link to a Test Page<br>
 
 	<script src="helpers.js"></script>
 	<script src="push.js"></script>
